1.1.0

pl 18.exp
	- use C++ RTTI iso access_Xxx ()
	- junk Graphical_lisp_element
	- catalan.ly

pl 17.tca1
 	- rewrite of mudela-book
 
pl 17.ms1
 	- added \thumb (used very often in cello music) in
 	  mf/feta-schrift.mf. 
 	- added /input/test/thumb.ly (example)

pl 16.jcn1
	- dashed-slur through scheme

pl 15.jcn4
	- more scheme hacks

pl 15.jcn3
	- try at scheme in Atom

pl 15.jcn2 # rest of
	- graphical-lisp-element + silly half hook-up with autuplet

pl 17.jcn5
	- stepmake pl59: templatised install (see mf/)
	- reasonably ps/tex success (with guile-1.2):
	  * input/kortjakje.ly
	- lots more scm stuff
	- bf: mf/mfplain.ini
	- stepmake pl58: guile 1.3 configure fix
	- working font-switch:
	  guile-1.2 and -lreadline -ldl from 1.3 configure...

pl 17.jcn4
	- installable stepmake pl57
	- urg, FIXME guile-1.3: 
	  * don't install shared libs! configure can't handle
	  * manually add: EXTRA_LIBS = -lguile -lreadline -ldl
	  * lily's truely broken, downgrade do 1.2

pl 17.jcn3
	- lots of stuff still broken, notably font selection, just try 
	   a()b
	   or so
	- tex output support
	- all output through scheme
	- option: f, output-format=X
	- geile placebox 
	- mf/mfplain.ini

pl 17.jcn2
	- all paper output through scheme, about half way

pl 17.jcn1
	- 16.jcn1
