@@ -9,6 +9,12 @@ Compiling with -O2 -finline-functions will cause crashes during
 parsing stage.
 
 
+[Linux ppc, egcs-1.0.2]
+
+All compiling with -O2 is suspect, in particular guile-1.3, and
+Lily herself will break.
+
+
 [All platforms] 
 
 When dealing with beaming that is not correct (eg quarter notes in
