@@ -1,3 +1,8 @@
+pl 0.jcn1
+pl 17.jcn7
+	- added: set*text, timesig, beam
+	- guile-1.3 is fine; my egcs-1.0.2's -O2 is broken
+
 1.1.0
 
 pl 18.exp
